styles/board.css
body {
  background-color: rgba(246, 247, 248, 255) !important;
}

.gridContainerChildBoard {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr;
  gap: 35px;
  min-height: 300px;
}

.parentDiv {
  padding-left: 296px;
  padding-right: 50px;
  padding-top: 80px;
}

.headlineBoard {
  font-size: 4rem;
}

.paddingRight50Px {
  padding-right: 50px;
}

.addTaskBoardBtn {
  background-color: rgba(42, 54, 71, 255);
  border-radius: 8px;
  color: white;
}

.mobileAddTask {
  display: none;
}

.bold {
  font-weight: bold;
}

.moveBackground {
  background-color: rgba(0, 0, 0, 0.2);
}

.findTaskBtn {
  background-color: white;
  border-radius: 8px;
}

.inputfindTask {
  border: none;
  outline: none;
}

::placeholder {
  color: #d1d1d1;
}

.cursorPointer {
  cursor: pointer;
}

.textWhite {
  color: white;
}

.boxShadow {
  box-shadow: -2px 0px 6px 0px rgb(0, 0, 0, 0.2);
}

.height40Px {
  height: 40px;
}

.dropArea {
  min-height: 90vh;
}

.bgWhite2 {
  background-color: white;
}

.contact-icon {
  height: 40px;
  width: 40px;
  margin-right: 4px;
}

.popUpBoardBackground {
  position: fixed;
  top: 0;
  height: 100vh;
  width: 100%;
  background-color: rgb(0, 0, 0, 0.2);
}

.emptyDropArea {
  text-align: center;
  margin-top: 10px;
  border: 1px dashed var(--icon, #a8a8a8);
  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
  padding: 10px;
  border-radius: 10px;
  color: #a8a8a8;
  background-color: #e7e7e7;
}

.popUpBoardTask {
  position: relative;
  min-height: 100px;
  min-width: 400px;
  max-width: 60%;
  overflow: hidden;
  background-color: white;
  padding: 4em 8em;
  border-radius: 20px;
}

.boardTaskClose {
  cursor: pointer;
  position: absolute;
  top: 25px;
  right: 25px;
}

.heightWidth35Px {
  height: 35px;
  width: 35px;
}

.boardTaskEdit {
  position: absolute;
  bottom: 25px;
  right: 25px;
}

.dNone {
  display: none !important;
}

.height35Px {
  height: 35px;
}

.margin-4 {
  margin: -4px;
}

.display-flex {
  display: flex;
}

.left-dialog {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.closeAddTask {
  position: absolute;
  right: 20px;
  top: 20px;
  cursor: pointer;
}

.right {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.addTaskFormWrapper {
  width: fit-content !important;
  height: fit-content !important;
  padding: 50px;
  background-color: white !important;
  position: absolute;
  border-radius: 30px;
}

#clr-picker {
  z-index: 1200;
}

.cardText {
  display: -webkit-box;
  -webkit-line-clamp: 5;
  /* Begrenzt den Text auf 5 Zeilen */
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.max-size {
  max-width: 350px;
  max-height: 150px;
  overflow: scroll;
}

.boardMember-margin {
  margin-left: 24px;
  margin-top: 8px;
}

.geneneratedSubtasks li {
  padding: 5px;
}

.progress {
  width: 55%;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  height: 5px;
  border-radius: 10px;
}

.progress-section {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: space-around;
}

.progress-count {
  font-size: 9px;
  font-weight: bold;
  font-family: Inter;
}

@media screen and (max-width: 1630px) {
  .popUpBoardTask {
    max-width: 90%;
  }
}

@media screen and (min-width: 871px) and (max-width: 1200px) {
  .grid-items {
    min-width: 0;
    min-height: 0;
  }

  .task-headline {
    font-size: smaller;
    align-self: center;
  }

  .sub-headline {
    font-size: small;
  }

  .contact-icon {
    height: 30px;
    width: 30px;
    margin-right: 4px;
  }

  .prio-icon {
    height: 30px;
  }

  .cardText {
    font-size: small;
  }
}

@media screen and (max-width: 870px) {
  .gridContainerChildBoard {
    display: flex;
    flex-direction: column;
  }

  .gridContainerChildBoard .dropArea {
    min-height: 300px;
  }

  .addTaskBoardBtn {
    display: none;
  }

  .headline-container-board {
    display: flex;
    flex-direction: column;
    gap: 15px;
  }

  .moveableCard {
    max-width: 300px;
  }

  .cardText {
    overflow: hidden;
    max-width: 90%;
    text-overflow: ellipsis;
  }

  .headlineBoard {
    position: relative;
    line-height: 1;
    margin-bottom: 20px;
  }

  .mobileAddTask {
    display: block;
    cursor: pointer;
    position: absolute;
    right: 0;
    bottom: 0;
  }

  .findTaskBtn,
  .findTaskBtn input {
    width: 100%;
  }

  .boardCategoryHeadline {
    font-size: 1.25rem;
  }
}

@media screen and (max-width: 760px) {
  .parentDiv {
    flex-direction: column;
    padding-right: 16px;
    padding-left: 16px;
  }

  .gridContainerChildBoard {
    width: 90%;
  }

  .dropArea {
    min-height: 100px !important;
  }

  .headline-container-board {
    align-self: flex-start;
    margin-left: 20px;
  }

  #done {
    padding-bottom: 600px;
  }
}

@media screen and (max-width: 580px) {
  .addTaskFormWrapper {
    width: 100% !important;
    height: 100% !important;
    border-radius: 0;
  }

  #form-btn-container {
    display: none !important;
  }

  .addTaskHeadline {
    margin-top: 50px;
  }

  .addTaskFormWrapper input,
  .addTaskFormWrapper textarea,
  #category-container,
  #assigned-container,
  #assigned-container > *,
  .subtasks-container,
  .subtasks-container > *,
  #contact-container,
  #contact-container > *,
  .prio-btn {
    width: 90%;
  }
}

@media (max-width: 300px) {
  .parentDiv {
    padding-right: 5px;
    padding-left: 5px;
  }
}

